--- a/package.json
+++ b/package.json
@@ -107,6 +107,9 @@
     "yargs": "^16.0.3"
   },
   "dependencies": {
-    "jsdom": "15.2.1"
+    "@blockly/continuous-toolbox": "^2.0.31",
+    "@blockly/plugin-workspace-search": "^5.0.13",
+    "jsdom": "15.2.1",
+    "monaco-editor": "^0.33.0"
   }
 }
